--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
             <li><a href="resume.html">Resume</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li class="dropdown">
+            <!-- <li class="dropdown">
               <a href="#"
                 ><span>Dropdown</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
@@ -95,7 +95,7 @@
                 <li><a href="#">Dropdown 3</a></li>
                 <li><a href="#">Dropdown 4</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -359,8 +359,9 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Facts</h2>
           <p>
-            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
-            consectetur velit
+            These numbers reflect my journey as a software engineer — the
+            projects I’ve delivered, the clients I’ve supported, and the
+            continuous learning that drives my work.
           </p>
         </div>
         <!-- End Section Title -->
@@ -371,11 +372,11 @@
               <div class="stats-item text-center w-100 h-100">
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="232"
+                  data-purecounter-end="5"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Clients</p>
+                <p>Hackathons & Team Collaborations</p>
               </div>
             </div>
             <!-- End Stats Item -->
@@ -384,11 +385,11 @@
               <div class="stats-item text-center w-100 h-100">
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="521"
+                  data-purecounter-end="30"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Projects</p>
+                <p>Projects Completed</p>
               </div>
             </div>
             <!-- End Stats Item -->
@@ -397,11 +398,11 @@
               <div class="stats-item text-center w-100 h-100">
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="1453"
+                  data-purecounter-end="4000"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Hours Of Support</p>
+                <p>Hours Dedicated to Development & Learning</p>
               </div>
             </div>
             <!-- End Stats Item -->
@@ -410,11 +411,11 @@
               <div class="stats-item text-center w-100 h-100">
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="32"
+                  data-purecounter-end="50"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Workers</p>
+                <p>Tools, Frameworks & Technologies Mastered</p>
               </div>
             </div>
             <!-- End Stats Item -->
@@ -429,8 +430,8 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Testimonials</h2>
           <p>
-            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
-            consectetur velit
+            Feedback from colleagues, clients, and mentors who have experienced
+            my work firsthand.
           </p>
         </div>
         <!-- End Section Title -->
@@ -460,8 +461,8 @@
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Md Tarek Aziz</h3>
+                  <h4>Ceo & CH; Founder</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -472,10 +473,9 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Proin iaculis purus consequat sem cure digni ssim donec
-                      porttitora entum suscipit rhoncus. Accusantium quam,
-                      ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                      risus at semper.</span
+                      >Parvez is adaptable and quick to learn. He takes
+                      initiative in solving problems and ensures the team stays
+                      on track with deadlines.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -490,8 +490,8 @@
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Mr Saeed Al Mutairi Chairman</h3>
+                  <h4>Owner</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -502,10 +502,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Export tempor illum tamen malis malis eram quae irure
-                      esse labore quem cillum quid cillum eram malis quorum
-                      velit fore eram velit sunt aliqua noster fugiat irure amet
-                      legam anim culpa.</span
+                      >Professional and reliable throughout the project. Parvez was able to translate my requirements into a functional solution that exceeded expectations.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -521,7 +518,7 @@
                     alt=""
                   />
                   <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h4>Software Engineer</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -532,10 +529,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Enim nisi quem export duis labore cillum quae magna enim
-                      sint quorum nulla quem veniam duis minim tempor labore
-                      quem eram duis noster aute amet eram fore quis sint
-                      minim.</span
+                      >Collaborating with Parvez was effortless. He’s proactive, communicates clearly, and always contributes ideas that improve the overall outcome.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -551,7 +545,7 @@
                     alt=""
                   />
                   <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h4>Team Lead</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -562,10 +556,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Fugiat enim eram quae cillum dolore dolor amet nulla
-                      culpa multos export minim fugiat minim velit minim dolor
-                      enim duis veniam ipsum anim magna sunt elit fore quem
-                      dolore labore illum veniam.</span
+                      >Parvez demonstrates strong technical expertise and delivers solutions that align perfectly with project goals. His attention to detail ensures that every feature works seamlessly.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -581,7 +572,7 @@
                     alt=""
                   />
                   <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <h4>Mentor</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -592,10 +583,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Quis quorum aliqua sint quem legam fore sunt eram irure
-                      aliqua veniam tempor noster veniam enim culpa labore duis
-                      sunt culpa nulla illum cillum fugiat legam esse veniam
-                      culpa fore nisi cillum quid.</span
+                      >Dedicated and driven, Parvez approaches challenges with creativity and persistence. His commitment to growth and quality makes him stand out.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -630,7 +618,7 @@
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          
         </div>
       </div>
     </footer>
