--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
             <li><a href="resume.html" class="active">Resume</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li class="dropdown">
+            <!-- <li class="dropdown">
               <a href="#"
                 ><span>Dropdown</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
@@ -95,7 +95,7 @@
                 <li><a href="#">Dropdown 3</a></li>
                 <li><a href="#">Dropdown 4</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -225,15 +225,15 @@
               <div class="resume-item">
                 <h4>Software Engineer</h4>
                 <h5>2023 - 2024</h5>
-                <p><em>New Market Road, Dhaka Bangladesh</em></p>
+                <p><em>Auckland, New Zealand</em></p>
                 <ul>
                   <li>
-                    Implemented communities, threaded discussions, job posts,
-                    real-time messaging, and advanced search.
+                    Delivered QR-enabled booking/pickup and dynamic pricing;
+                    applied Factory, Singleton, and Observer patterns.
                   </li>
                   <li>
-                    Owned schema design, API contracts, and responsive UI; wrote
-                    setup docs and tests.
+                    Produced UML diagrams, test coverage, and deployment-ready
+                    README.
                   </li>
                 </ul>
               </div>
@@ -265,7 +265,6 @@
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
     </footer>
