--- a/about.html
+++ b/about.html
@@ -101,11 +101,11 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <div class="header-social-links">
-          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+       <div class="header-social-links">
+          <a href="https://x.com/parvezh919" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/parvezh919" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/parvezh2001/" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </header>
@@ -608,10 +608,10 @@
           </p>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/parvezh919"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/parvezh919"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/parvezh2001/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
