--- a/index.html
+++ b/index.html
@@ -102,10 +102,20 @@
         </nav>
 
         <div class="header-social-links">
-          <a href="https://x.com/parvezh919" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="https://www.facebook.com/parvezh919" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/parvezh2001/" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/parvezh919" class="twitter"
+            ><i class="bi bi-twitter-x"></i
+          ></a>
+          <a href="https://www.facebook.com/parvezh919" class="facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/parvezh2001/" class="instagram"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/parvez-hasan-1b0030247/"
+            class="linkedin"
+            ><i class="bi bi-linkedin"></i
+          ></a>
         </div>
       </div>
     </header>
@@ -143,9 +153,15 @@
         </div>
         <div class="social-links d-flex justify-content-center">
           <a href="https://x.com/parvezh919"><i class="bi bi-twitter-x"></i></a>
-          <a href="https://www.facebook.com/parvezh919"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/parvezh2001/"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.facebook.com/parvezh919"
+            ><i class="bi bi-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/parvezh2001/"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/"
+            ><i class="bi bi-linkedin"></i
+          ></a>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
