--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
         >
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Parvez Hasan</h1>
+          <h1 class="sitename">Parvez </h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -101,11 +101,11 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <div class="header-social-links">
-          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+       <div class="header-social-links">
+          <a href="https://x.com/parvezh919" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/parvezh919" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/parvezh2001/" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </header>
@@ -459,22 +459,21 @@
         <div class="copyright text-center">
           <p>
             © <span>Copyright</span>
-            <strong class="px-1 sitename">Kelly</strong>
+            <strong class="px-1 sitename">Hasan</strong>
             <span>All Rights Reserved<br /></span>
           </p>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/parvezh919"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/parvezh919"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/parvezh2001/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/parvez-hasan-1b0030247/"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
     </footer>
